--- a/src/test/resources/l2backpack/lang/zh_cn/item.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/item.json
@@ -4,7 +4,9 @@
   },
   "item.l2backpack":{
 	"ender_backpack": "末影背包",
-	"ender_pocket": "空间升级组件"
+	"ender_pocket": "空间升级组件",
+	"armor_bag": "装备袋",
+	"book_bag": "附魔书袋"
   },
   "-cartesian": {
 	"backpack": {
