--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -2,7 +2,11 @@
   "l2backpack": {
 	"tooltip": {
 	  "backpack_slot": "背包升级: %s / %s",
-	  "owner": "所有者: %s"
+	  "owner": "所有者: %s",
+	  "bag": {
+		"size": "容量:%s/%s",
+		"info": "右键收起背包中的装备，蹲下右键倒出"
+	  }
 	}
   }
 }
