--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -44,5 +44,6 @@
   "l2backpack.tooltip.backpack_slot": "背包升级: %s / %s",
   "l2backpack.tooltip.owner": "所有者: %s",
   "l2backpack.tooltip.bag.size": "容量:%s/%s",
-  "l2backpack.tooltip.bag.info": "右键收起背包中的装备，蹲下右键倒出"
+  "l2backpack.tooltip.bag.info": "右键收起背包中的装备，蹲下右键倒出",
+  "l2backpack.tooltip.arrow_bag": "放在副手，主手持弓，按shift+数字键或者上下选择箭"
 }
