generify some classes

--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -7,7 +7,7 @@
 		"size": "容量:%s/%s",
 		"info": "右键收起背包中的装备，蹲下右键倒出"
 	  },
-	  "arrow_bag": "放在副手，主手持弓，按shift+数字键或者上下选择箭"
+	  "arrow_bag": "放在副手(或饰品栏)，主手持弓，按shift+数字键或者上下选择箭"
 	}
   }
 }
