--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -41,6 +41,10 @@
   "container.l2backpack.arrow_bag": "箭袋",
   "container.l2backpack.dimensional_storage": "空间钥匙",
   "itemGroup.l2backpack.backpack": "L2背包",
+  "key.categories.l2backpack": "背包按键",
+  "key.l2backpack.open": "打开背部饰品栏的容器",
+  "key.l2backpack.up": "箭矢选择-向上",
+  "key.l2backpack.down": "箭矢选择-向下",
   "l2backpack.tooltip.backpack_slot": "背包升级: %s / %s",
   "l2backpack.tooltip.owner": "所有者: %s",
   "l2backpack.tooltip.bag.size": "容量:%s/%s",
