add ender drawer content display

--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -6,6 +6,7 @@
   "item.l2backpack.book_bag": "附魔书袋",
   "item.l2backpack.arrow_bag": "箭袋",
   "item.l2backpack.drawer": "抽屉",
+  "item.l2backpack.ender_drawer": "末影抽屉",
   "item.l2backpack.backpack_black": "黑色背包",
   "item.l2backpack.backpack_blue": "蓝色背包",
   "item.l2backpack.backpack_brown": "棕色背包",
