--- a/src/test/resources/l2backpack/lang/zh_cn/item.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/item.json
@@ -8,7 +8,8 @@
 	"armor_bag": "装备袋",
 	"book_bag": "附魔书袋",
 	"arrow_bag": "箭袋",
-	"drawer": "抽屉"
+	"drawer": "抽屉",
+	"ender_drawer": "末影抽屉"
   },
   "-cartesian": {
 	"backpack": {
