complete ender drawer block

--- a/src/test/resources/l2backpack/lang/zh_cn/item.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/item.json
@@ -1,6 +1,7 @@
 {
   "block.l2backpack": {
-	"dimensional_storage": "空间箱子"
+	"dimensional_storage": "空间箱子",
+	"ender_drawer": "末影抽屉"
   },
   "item.l2backpack":{
 	"ender_backpack": "末影背包",
