--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -13,7 +13,8 @@
 		"drawer": "在任意GUI内，用物品左键抽屉来存入物品，右键抽屉取出物品。只能存放一种没有NBT的物品，但是能储存64组。",
 		"arrow_bag": "放在副手(或饰品栏)，主手持弓，可以从箭袋内预览、选择、使用箭矢。按shift+数字键或者上下选择箭",
 		"quick_inv": "右键打开，或者在玩家背包/末影箱/共享末影背包的GUI内右键快捷访问",
-		"quick_any": "右键打开，或者在任何GUI内右键快捷访问"
+		"quick_any": "右键打开，或者在任何GUI内右键快捷访问",
+		"ender_drawer": "对于末影抽屉方块，手持物品右键存入，空手右键取出一组。如果需要大量转移物品，用抽屉物品交互来一次行大量存入/提取"
 	  },
 	  "collect": {
 		"bag": "拿在手上右键收起工具栏以外的背包内的对应物品",
@@ -24,6 +25,7 @@
 		"drawer": "蹲下右键提取1组物品"
 	  },
 	  "dump": "对着方块容器蹲下右键，把所有物品倒入目标方块",
+	  "load": "对着方块容器蹲下左键，从目标方块尽可能的提取物品",
 	  "place": "蹲下右键放置方块形式",
 	  "shift": "按[shift]显示使用方法",
 	  "keybind": "如果有Curios，可以放到背部饰品栏，然后绑定按键快捷打开"
