add load to ender drawer

--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -58,9 +58,9 @@
   "l2backpack.tooltip.info.quick_any": "右键打开，或者在任何GUI内右键快捷访问",
   "l2backpack.tooltip.info.ender_drawer": "对于末影抽屉方块，手持物品右键存入，空手右键取出一组。如果需要大量转移物品，用抽屉物品交互来一次行大量存入/提取",
   "l2backpack.tooltip.collect.bag": "拿在手上右键收起工具栏以外的背包内的对应物品",
-  "l2backpack.tooltip.collect.drawer": "拿在手上右键收起背包内的对应物品",
+  "l2backpack.tooltip.collect.drawer": "拿在手上蹲下右键收起背包内的对应物品",
   "l2backpack.tooltip.extract.bag": "蹲下右键倒出所有物品",
-  "l2backpack.tooltip.extract.drawer": "蹲下右键提取1组物品",
+  "l2backpack.tooltip.extract.drawer": "右键提取1组物品",
   "l2backpack.tooltip.dump": "对着方块容器蹲下右键，把所有物品倒入目标方块",
   "l2backpack.tooltip.load": "对着方块容器蹲下左键，从目标方块尽可能的提取物品",
   "l2backpack.tooltip.place": "蹲下右键放置方块形式",
