--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -18,11 +18,11 @@
 	  },
 	  "collect": {
 		"bag": "拿在手上右键收起工具栏以外的背包内的对应物品",
-		"drawer": "拿在手上右键收起背包内的对应物品"
+		"drawer": "拿在手上蹲下右键收起背包内的对应物品"
 	  },
 	  "extract": {
 		"bag": "蹲下右键倒出所有物品",
-		"drawer": "蹲下右键提取1组物品"
+		"drawer": "右键提取1组物品"
 	  },
 	  "dump": "对着方块容器蹲下右键，把所有物品倒入目标方块",
 	  "load": "对着方块容器蹲下左键，从目标方块尽可能的提取物品",
