add to back slot

--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -53,7 +53,7 @@
   "l2backpack.tooltip.bag.size": "容量:%s/%s",
   "l2backpack.tooltip.drawer.content": "内容物：%s x%s",
   "l2backpack.tooltip.info.drawer": "在任意GUI内，用物品左键抽屉来存入物品，右键抽屉取出物品。只能存放一种没有NBT的物品，但是能储存64组。",
-  "l2backpack.tooltip.info.arrow_bag": "放在副手(或饰品栏)，主手持弓，可以从箭袋内预览、选择、使用箭矢。按shift+数字键或者上下选择箭",
+  "l2backpack.tooltip.info.arrow_bag": "放在副手/胸甲栏/饰品栏，主手持弓，可以从箭袋内预览、选择、使用箭矢。按shift+数字键或者上下选择箭",
   "l2backpack.tooltip.info.quick_inv": "右键打开，或者在玩家背包/末影箱/共享末影背包的GUI内右键快捷访问",
   "l2backpack.tooltip.info.quick_any": "右键打开，或者在任何GUI内右键快捷访问",
   "l2backpack.tooltip.info.ender_drawer": "对于末影抽屉方块，手持物品右键存入，空手右键取出一组。如果需要大量转移物品，用抽屉物品交互来一次行大量存入/提取",
@@ -65,7 +65,7 @@
   "l2backpack.tooltip.load": "对着方块容器蹲下左键，从目标方块尽可能的提取物品",
   "l2backpack.tooltip.place": "蹲下右键放置方块形式",
   "l2backpack.tooltip.shift": "按[shift]显示使用方法",
-  "l2backpack.tooltip.keybind": "如果有Curios，可以放到背部饰品栏，然后绑定按键快捷打开",
+  "l2backpack.tooltip.keybind": "可以放到胸甲栏或饰品栏，然后绑定按键快捷打开",
   "l2backpack.chat.feedback.dump": "已将%s物品放入目标方块",
   "l2backpack.chat.feedback.load": "已从目标方块取出%s物品",
   "l2backpack.chat.feedback.extract": "已取出%s物品",
