fix bug and add tip

--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -1,13 +1,13 @@
 {
   "block.l2backpack.dimensional_storage": "空间箱子",
-  "block.l2backpack.ender_drawer": "末影抽屉",
+  "block.l2backpack.ender_drawer": "末影匣子",
   "item.l2backpack.ender_backpack": "末影背包",
   "item.l2backpack.ender_pocket": "空间升级组件",
   "item.l2backpack.armor_bag": "装备袋",
   "item.l2backpack.book_bag": "附魔书袋",
   "item.l2backpack.arrow_bag": "箭袋",
-  "item.l2backpack.drawer": "抽屉",
-  "item.l2backpack.ender_drawer": "末影抽屉",
+  "item.l2backpack.drawer": "水晶匣子",
+  "item.l2backpack.ender_drawer": "末影匣子",
   "item.l2backpack.backpack_black": "黑色背包",
   "item.l2backpack.backpack_blue": "蓝色背包",
   "item.l2backpack.backpack_brown": "棕色背包",
@@ -24,25 +24,25 @@
   "item.l2backpack.backpack_red": "红色背包",
   "item.l2backpack.backpack_white": "白色背包",
   "item.l2backpack.backpack_yellow": "黄色背包",
-  "item.l2backpack.dimensional_storage_black": "黑色共享末影背包",
-  "item.l2backpack.dimensional_storage_blue": "蓝色共享末影背包",
-  "item.l2backpack.dimensional_storage_brown": "棕色共享末影背包",
-  "item.l2backpack.dimensional_storage_cyan": "青色共享末影背包",
-  "item.l2backpack.dimensional_storage_gray": "灰色共享末影背包",
-  "item.l2backpack.dimensional_storage_green": "绿色共享末影背包",
-  "item.l2backpack.dimensional_storage_light_blue": "淡蓝色共享末影背包",
-  "item.l2backpack.dimensional_storage_light_gray": "淡灰色共享末影背包",
-  "item.l2backpack.dimensional_storage_lime": "黄绿色共享末影背包",
-  "item.l2backpack.dimensional_storage_magenta": "品红色共享末影背包",
-  "item.l2backpack.dimensional_storage_orange": "橙色共享末影背包",
-  "item.l2backpack.dimensional_storage_pink": "粉红色共享末影背包",
-  "item.l2backpack.dimensional_storage_purple": "紫色共享末影背包",
-  "item.l2backpack.dimensional_storage_red": "红色共享末影背包",
-  "item.l2backpack.dimensional_storage_white": "白色共享末影背包",
-  "item.l2backpack.dimensional_storage_yellow": "黄色共享末影背包",
+  "item.l2backpack.dimensional_storage_black": "黑色空间背包",
+  "item.l2backpack.dimensional_storage_blue": "蓝色空间背包",
+  "item.l2backpack.dimensional_storage_brown": "棕色空间背包",
+  "item.l2backpack.dimensional_storage_cyan": "青色空间背包",
+  "item.l2backpack.dimensional_storage_gray": "灰色空间背包",
+  "item.l2backpack.dimensional_storage_green": "绿色空间背包",
+  "item.l2backpack.dimensional_storage_light_blue": "淡蓝色空间背包",
+  "item.l2backpack.dimensional_storage_light_gray": "淡灰色空间背包",
+  "item.l2backpack.dimensional_storage_lime": "黄绿色空间背包",
+  "item.l2backpack.dimensional_storage_magenta": "品红色空间背包",
+  "item.l2backpack.dimensional_storage_orange": "橙色空间背包",
+  "item.l2backpack.dimensional_storage_pink": "粉红色空间背包",
+  "item.l2backpack.dimensional_storage_purple": "紫色空间背包",
+  "item.l2backpack.dimensional_storage_red": "红色空间背包",
+  "item.l2backpack.dimensional_storage_white": "白色空间背包",
+  "item.l2backpack.dimensional_storage_yellow": "黄色空间背包",
   "container.l2backpack.backpack": "背包",
   "container.l2backpack.arrow_bag": "箭袋",
-  "container.l2backpack.dimensional_storage": "空间钥匙",
+  "container.l2backpack.dimensional_storage": "空间背包",
   "itemGroup.l2backpack.backpack": "L2背包",
   "key.categories.l2backpack": "背包按键",
   "key.l2backpack.open": "打开背部饰品栏的容器",
@@ -52,11 +52,13 @@
   "l2backpack.tooltip.owner": "所有者: %s",
   "l2backpack.tooltip.bag.size": "容量:%s/%s",
   "l2backpack.tooltip.drawer.content": "内容物：%s x%s",
-  "l2backpack.tooltip.info.drawer": "在任意GUI内，用物品左键抽屉来存入物品，右键抽屉取出物品。只能存放一种没有NBT的物品，但是能储存64组。",
+  "l2backpack.tooltip.info.drawer": "在任意GUI内，用物品左键匣子来存入物品，右键匣子取出物品。只能存放一种没有NBT的物品，但是能储存64组。",
   "l2backpack.tooltip.info.arrow_bag": "放在副手/胸甲栏/饰品栏，主手持弓，可以从箭袋内预览、选择、使用箭矢。按shift+数字键或者上下选择箭",
-  "l2backpack.tooltip.info.quick_inv": "右键打开，或者在玩家背包/末影箱/共享末影背包的GUI内右键快捷访问",
+  "l2backpack.tooltip.info.quick_inv": "右键打开，或者在玩家背包/末影箱/空间背包的GUI内右键快捷访问",
   "l2backpack.tooltip.info.quick_any": "右键打开，或者在任何GUI内右键快捷访问",
-  "l2backpack.tooltip.info.ender_drawer": "对于末影抽屉方块，手持物品右键存入，空手右键取出一组。如果需要大量转移物品，用抽屉物品交互来一次行大量存入/提取",
+  "l2backpack.tooltip.info.ender_drawer_block": "对于末影匣子方块，手持物品右键存入，空手右键取出一组。如果需要大量转移物品，用水晶匣子物品交互来一次行大量存入/提取",
+  "l2backpack.tooltip.info.dimensional": "所有相同颜色且相同所有者的空间背包共用相同的空间，包括物品和方块形式",
+  "l2backpack.tooltip.info.ender_drawer": "所有设置了相同物品且是相同所有者的末影匣子共用相同的空间，包括物品和方块形式",
   "l2backpack.tooltip.collect.bag": "拿在手上右键收起工具栏以外的背包内的对应物品",
   "l2backpack.tooltip.collect.drawer": "拿在手上蹲下右键收起背包内的对应物品",
   "l2backpack.tooltip.extract.bag": "蹲下右键倒出所有物品",
@@ -69,5 +71,6 @@
   "l2backpack.chat.feedback.dump": "已将%s物品放入目标方块",
   "l2backpack.chat.feedback.load": "已从目标方块取出%s物品",
   "l2backpack.chat.feedback.extract": "已取出%s物品",
-  "l2backpack.chat.feedback.collect": "已收集%s物品"
+  "l2backpack.chat.feedback.collect": "已收集%s物品",
+  "l2backpack.chat.feedback.no_item": "末影匣子没有设置物品，不能放置"
 }
