--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -10,11 +10,13 @@
 		"content": "内容物：%s x%s"
 	  },
 	  "info": {
-		"drawer": "在任意GUI内，用物品左键抽屉来存入物品，右键抽屉取出物品。只能存放一种没有NBT的物品，但是能储存64组。",
+		"drawer": "在任意GUI内，用物品左键匣子来存入物品，右键匣子取出物品。只能存放一种没有NBT的物品，但是能储存64组。",
 		"arrow_bag": "放在副手/胸甲栏/饰品栏，主手持弓，可以从箭袋内预览、选择、使用箭矢。按shift+数字键或者上下选择箭",
-		"quick_inv": "右键打开，或者在玩家背包/末影箱/共享末影背包的GUI内右键快捷访问",
+		"quick_inv": "右键打开，或者在玩家背包/末影箱/空间背包的GUI内右键快捷访问",
 		"quick_any": "右键打开，或者在任何GUI内右键快捷访问",
-		"ender_drawer": "对于末影抽屉方块，手持物品右键存入，空手右键取出一组。如果需要大量转移物品，用抽屉物品交互来一次行大量存入/提取"
+		"ender_drawer_block": "对于末影匣子方块，手持物品右键存入，空手右键取出一组。如果需要大量转移物品，用水晶匣子物品交互来一次行大量存入/提取",
+		"dimensional": "所有相同颜色且相同所有者的空间背包共用相同的空间，包括物品和方块形式",
+		"ender_drawer": "所有设置了相同物品且是相同所有者的末影匣子共用相同的空间，包括物品和方块形式"
 	  },
 	  "collect": {
 		"bag": "拿在手上右键收起工具栏以外的背包内的对应物品",
@@ -34,7 +36,8 @@
 	  "dump": "已将%s物品放入目标方块",
 	  "load": "已从目标方块取出%s物品",
 	  "extract": "已取出%s物品",
-	  "collect": "已收集%s物品"
+	  "collect": "已收集%s物品",
+	  "no_item": "末影匣子没有设置物品，不能放置"
 	}
   }
 }
