--- a/src/test/resources/l2backpack/lang/zh_cn/item.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/item.json
@@ -1,7 +1,7 @@
 {
   "block.l2backpack": {
 	"dimensional_storage": "空间箱子",
-	"ender_drawer": "末影抽屉"
+	"ender_drawer": "末影匣子"
   },
   "item.l2backpack":{
 	"ender_backpack": "末影背包",
@@ -9,8 +9,8 @@
 	"armor_bag": "装备袋",
 	"book_bag": "附魔书袋",
 	"arrow_bag": "箭袋",
-	"drawer": "抽屉",
-	"ender_drawer": "末影抽屉"
+	"drawer": "水晶匣子",
+	"ender_drawer": "末影匣子"
   },
   "-cartesian": {
 	"backpack": {
@@ -19,7 +19,7 @@
 	  "list": [
 		{
 		  "backpack": "背包",
-		  "dimensional_storage": "共享末影背包"
+		  "dimensional_storage": "空间背包"
 		},
 		{
 		  "black": "黑色",
