--- a/src/test/resources/l2backpack/lang/zh_cn/main.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/main.json
@@ -2,7 +2,7 @@
   "container.l2backpack": {
 	"backpack": "背包",
 	"arrow_bag": "箭袋",
-	"dimensional_storage": "空间钥匙"
+	"dimensional_storage": "空间背包"
   },
   "itemGroup.l2backpack": {
 	"backpack": "L2背包"
