--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -16,7 +16,8 @@
 		"quick_any": "右键打开，或者在任何GUI内右键快捷访问",
 		"ender_drawer_block": "对于末影匣子方块，手持物品右键存入，空手右键取出一组。如果需要大量转移物品，用水晶匣子物品交互来一次行大量存入/提取",
 		"dimensional": "所有相同颜色且相同所有者的空间背包共用相同的空间，包括物品和方块形式",
-		"ender_drawer": "所有设置了相同物品且是相同所有者的末影匣子共用相同的空间，包括物品和方块形式"
+		"ender_drawer": "所有设置了相同物品且是相同所有者的末影匣子共用相同的空间，包括物品和方块形式",
+		"upgrade":"在锻造台中使用空间升级组件来升级。内容物品和名字会被保留"
 	  },
 	  "collect": {
 		"bag": "拿在手上右键收起工具栏以外的背包内的对应物品",
