--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -60,6 +60,7 @@
   "l2backpack.tooltip.info.dimensional": "所有相同颜色且相同所有者的空间背包共用相同的空间，包括物品和方块形式",
   "l2backpack.tooltip.info.ender_drawer": "所有设置了相同物品且是相同所有者的末影匣子共用相同的空间，包括物品和方块形式",
   "l2backpack.tooltip.info.upgrade": "在锻造台中使用空间升级组件来升级。内容物品和名字会被保留",
+  "l2backpack.tooltip.info.exit": "关闭GUI时会回到上一个GUI（只能回到玩家背包/末影箱/空间背包），shift+esc全部关闭",
   "l2backpack.tooltip.collect.bag": "拿在手上右键收起工具栏以外的背包内的对应物品",
   "l2backpack.tooltip.collect.drawer": "拿在手上蹲下右键收起背包内的对应物品",
   "l2backpack.tooltip.extract.bag": "蹲下右键倒出所有物品",
