implement ender switch

--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -8,6 +8,10 @@
   "item.l2backpack.arrow_bag": "箭袋",
   "item.l2backpack.drawer": "水晶匣子",
   "item.l2backpack.ender_drawer": "末影匣子",
+  "item.l2backpack.armor_swap": "护甲切换袋",
+  "item.l2backpack.combined_swap": "三合一切换袋",
+  "item.l2backpack.ender_swap": "四合一切换袋",
+  "item.l2backpack.tool_swap": "工具切换袋",
   "item.l2backpack.backpack_black": "黑色背包",
   "item.l2backpack.backpack_blue": "蓝色背包",
   "item.l2backpack.backpack_brown": "棕色背包",
@@ -43,14 +47,19 @@
   "container.l2backpack.backpack": "背包",
   "container.l2backpack.arrow_bag": "箭袋",
   "container.l2backpack.dimensional_storage": "空间背包",
-  "itemGroup.l2backpack.backpack": "L2背包",
+  "container.l2backpack.armor_bag": "护甲切换袋",
+  "container.l2backpack.ender_switch": "四合一切换袋",
+  "container.l2backpack.multi_switch": "三合一切换袋",
+  "container.l2backpack.tool_bag": "工具切换袋",
+  "itemGroup.l2backpack.backpack": "莱特兰·背包",
   "key.categories.l2backpack": "背包按键",
   "key.l2backpack.open": "打开背部饰品栏的容器",
   "key.l2backpack.up": "箭矢选择-向上",
   "key.l2backpack.down": "箭矢选择-向下",
+  "key.l2backpack.swap": "工具/护甲交换",
   "l2backpack.tooltip.backpack_slot": "背包升级: %s / %s",
   "l2backpack.tooltip.owner": "所有者: %s",
-  "l2backpack.tooltip.bag.size": "容量:%s/%s",
+  "l2backpack.tooltip.item.size": "容量:%s/%s",
   "l2backpack.tooltip.drawer.content": "内容物：%s x%s",
   "l2backpack.tooltip.info.drawer": "在任意GUI内，用物品左键匣子来存入物品，右键匣子取出物品。只能存放一种没有NBT的物品，但是能储存64组。",
   "l2backpack.tooltip.info.arrow_bag": "放在副手/胸甲栏/饰品栏，主手持弓，可以从箭袋内预览、选择、使用箭矢。按shift+数字键或者上下选择箭",
@@ -61,9 +70,14 @@
   "l2backpack.tooltip.info.ender_drawer": "所有设置了相同物品且是相同所有者的末影匣子共用相同的空间，包括物品和方块形式",
   "l2backpack.tooltip.info.upgrade": "在锻造台中使用空间升级组件来升级。内容物品和名字会被保留",
   "l2backpack.tooltip.info.exit": "关闭GUI时会回到上一个GUI（只能回到玩家背包/末影箱/空间背包），shift+esc全部关闭",
-  "l2backpack.tooltip.collect.bag": "拿在手上右键收起工具栏以外的背包内的对应物品",
+  "l2backpack.tooltip.info.tool_bag": "放在副手/胸甲栏/饰品栏，主手持工具/武器，可以从袋内预览、选择、快速切换。按shift+数字键或者上下选择物品，按R切换",
+  "l2backpack.tooltip.info.armor_bag": "放在副手/胸甲栏/饰品栏，主手持弓，可以从袋内预览、选择、快速切换。按shift+数字键或者上下选择护甲，按R切换",
+  "l2backpack.tooltip.info.ender_switch": "同时拥有三合一切换袋和末影背包的功能。注意箭/工具/护甲是储存在这个物品内的，而不是末影箱内",
+  "l2backpack.tooltip.info.inherit": "继承背包的所有功能，只是不能升级",
+  "l2backpack.tooltip.info.multi_switch": "同时拥有箭/工具/护甲的快速切换功能。主手持弓激活箭袋模式。持工具武器激活工具切换模式。空手激活护甲切换模式。",
+  "l2backpack.tooltip.collect.item": "拿在手上右键收起工具栏以外的背包内的对应物品",
   "l2backpack.tooltip.collect.drawer": "拿在手上蹲下右键收起背包内的对应物品",
-  "l2backpack.tooltip.extract.bag": "蹲下右键倒出所有物品",
+  "l2backpack.tooltip.extract.item": "蹲下右键倒出所有物品",
   "l2backpack.tooltip.extract.drawer": "右键提取1组物品",
   "l2backpack.tooltip.dump": "对着方块容器蹲下右键，把所有物品倒入目标方块",
   "l2backpack.tooltip.load": "对着方块容器蹲下左键，从目标方块尽可能的提取物品",
