--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -3,7 +3,7 @@
 	"tooltip": {
 	  "backpack_slot": "背包升级: %s / %s",
 	  "owner": "所有者: %s",
-	  "bag": {
+	  "item": {
 		"size": "容量:%s/%s"
 	  },
 	  "drawer": {
@@ -17,15 +17,20 @@
 		"ender_drawer_block": "对于末影匣子方块，手持物品右键存入，空手右键取出一组。如果需要大量转移物品，用水晶匣子物品交互来一次行大量存入/提取",
 		"dimensional": "所有相同颜色且相同所有者的空间背包共用相同的空间，包括物品和方块形式",
 		"ender_drawer": "所有设置了相同物品且是相同所有者的末影匣子共用相同的空间，包括物品和方块形式",
-		"upgrade":"在锻造台中使用空间升级组件来升级。内容物品和名字会被保留",
-		"exit": "关闭GUI时会回到上一个GUI（只能回到玩家背包/末影箱/空间背包），shift+esc全部关闭"
+		"upgrade": "在锻造台中使用空间升级组件来升级。内容物品和名字会被保留",
+		"exit": "关闭GUI时会回到上一个GUI（只能回到玩家背包/末影箱/空间背包），shift+esc全部关闭",
+		"tool_bag": "放在副手/胸甲栏/饰品栏，主手持工具/武器，可以从袋内预览、选择、快速切换。按shift+数字键或者上下选择物品，按R切换",
+		"armor_bag": "放在副手/胸甲栏/饰品栏，主手持弓，可以从袋内预览、选择、快速切换。按shift+数字键或者上下选择护甲，按R切换",
+		"ender_switch": "同时拥有三合一切换袋和末影背包的功能。注意箭/工具/护甲是储存在这个物品内的，而不是末影箱内",
+		"inherit": "继承背包的所有功能，只是不能升级",
+		"multi_switch": "同时拥有箭/工具/护甲的快速切换功能。主手持弓激活箭袋模式。持工具武器激活工具切换模式。空手激活护甲切换模式。"
 	  },
 	  "collect": {
-		"bag": "拿在手上右键收起工具栏以外的背包内的对应物品",
+		"item": "拿在手上右键收起工具栏以外的背包内的对应物品",
 		"drawer": "拿在手上蹲下右键收起背包内的对应物品"
 	  },
 	  "extract": {
-		"bag": "蹲下右键倒出所有物品",
+		"item": "蹲下右键倒出所有物品",
 		"drawer": "右键提取1组物品"
 	  },
 	  "dump": "对着方块容器蹲下右键，把所有物品倒入目标方块",
