--- a/src/test/resources/l2backpack/lang/zh_cn/main.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/main.json
@@ -2,15 +2,20 @@
   "container.l2backpack": {
 	"backpack": "背包",
 	"arrow_bag": "箭袋",
-	"dimensional_storage": "空间背包"
+	"dimensional_storage": "空间背包",
+	"armor_bag": "护甲切换袋",
+	"ender_switch": "四合一切换袋",
+	"multi_switch": "三合一切换袋",
+	"tool_bag": "工具切换袋"
   },
   "itemGroup.l2backpack": {
-	"backpack": "L2背包"
+	"backpack": "莱特兰·背包"
   },
   "key": {
 	"categories.l2backpack": "背包按键",
 	"l2backpack.open": "打开背部饰品栏的容器",
 	"l2backpack.up": "箭矢选择-向上",
-	"l2backpack.down": "箭矢选择-向下"
+	"l2backpack.down": "箭矢选择-向下",
+	"l2backpack.swap": "工具/护甲交换"
   }
 }
