--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -22,7 +22,7 @@
 	"dimension_hopper.title": "末影箱与漏斗",
 	"dimension_recursion.description": "在空间背包内打开背包",
 	"dimension_recursion.title": "无限递增",
-	"dimension_share.description": "打开他人的空间背包或使用他人的末影抽屉",
+	"dimension_share.description": "打开他人的空间背包或使用他人的末影匣子",
 	"dimension_share.title": "共享空间",
 	"drawer.description": "获得一个水晶匣子",
 	"drawer.title": "便携式抽屉",
@@ -61,7 +61,7 @@
 	"root.description": "使用背包指南",
 	"root.title": "欢迎使用L2Backpack",
 	"safe_storage.description": "在末影背包中打开一个背包",
-	"safe_storage.title": "死亡不掉落，我做弊了！",
+	"safe_storage.title": "死亡不掉落，我作弊了！",
 	"scabbard.description": "获得一个工具切换袋",
 	"scabbard.title": "工具应有尽有",
 	"upgrade.description": "升级一个背包",
