--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -7,7 +7,7 @@
 	"bag.description": "获取一个装备收纳袋或者一个附魔书收纳袋",
 	"bag.title": "万物皆可叠",
 	"bag_collect.description": "右键收纳袋以收起背包内用不到的装备或附魔书",
-	"bag_collect.title": "收纳大师",
+	"bag_collect.title": "一键收纳",
 	"bag_dump.description": "将收集到的武器和工具通过shift加右键从包里扔掉",
 	"bag_dump.title": "清理大师",
 	"close_all.description": "用shift+esc直接退出所有GUI",
