--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -11,7 +11,7 @@
 	"bag_dump.description": "将收集到的武器和工具通过shift加右键从包里扔掉",
 	"bag_dump.title": "一键清理",
 	"close_all.description": "用shift+esc直接退出所有GUI",
-	"close_all.title": "一键退出",
+	"close_all.title": "快速退出",
 	"color.description": "获得所有颜色的背包",
 	"color.title": "七彩斑斓",
 	"dimension.description": "获得空间背包",
