--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -17,7 +17,7 @@
 	"dimension.description": "获得空间背包",
 	"dimension.title": "这是...末影箱？",
 	"dimension_analog.description": "使用红石比较器测量一个空间背包或者末影匣子",
-	"dimension_analog.title": "末影箱与比较器",
+	"dimension_analog.title": "无线通信",
 	"dimension_hopper.description": "使用漏斗将物品输入空间背包或末影匣子",
 	"dimension_hopper.title": "漏斗的应用",
 	"dimension_recursion.description": "在空间背包内打开背包",
