--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -23,7 +23,7 @@
 	"dimension_recursion.description": "在空间背包内打开背包",
 	"dimension_recursion.title": "无限递增",
 	"dimension_share.description": "打开他人的空间背包或使用他人的末影匣子",
-	"dimension_share.title": "共享空间",
+	"dimension_share.title": "让我康康！",
 	"drawer.description": "获得一个水晶匣子",
 	"drawer.title": "便携式抽屉",
 	"drawer_collect.description": "通过shift加右键将物品收集到水晶匣子里",
