--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -41,7 +41,7 @@
 	"ender_drawer_place.description": "放置一个末影匣子",
 	"ender_drawer_place.title": "远程快递",
 	"ender_pocket.description": "获得一个空间升级组件",
-	"ender_pocket.title": "四维口袋",
+	"ender_pocket.title": "空间扩充",
 	"ender_switch.description": "获得一个四合一切换袋",
 	"ender_switch.title": "四位一体",
 	"folder_structure.description": "退出背包的GUI并返回上一页",
