--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -57,7 +57,7 @@
 	"quick_access.description": "直接在物品栏中打开背包",
 	"quick_access.title": "会员通道",
 	"quiver.description": "获得一个箭袋",
-	"quiver.title": "9箭待发",
+	"quiver.title": "备箭充足",
 	"root.description": "使用背包指南",
 	"root.title": "欢迎使用L2Backpack",
 	"safe_storage.description": "在末影背包中打开一个背包",
