--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -61,7 +61,7 @@
 	"root.description": "使用背包指南",
 	"root.title": "欢迎使用L2Backpack",
 	"safe_storage.description": "在末影背包中打开一个背包",
-	"safe_storage.title": "死亡不掉落，我作弊了！",
+	"safe_storage.title": "安全仓库",
 	"scabbard.description": "获得一个工具切换袋",
 	"scabbard.title": "工具应有尽有",
 	"upgrade.description": "升级一个背包",
