--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -49,7 +49,7 @@
 	"interact_dump.description": "手持水晶匣子shift加右键将物品倒入一个箱子里",
 	"interact_dump.title": "卸货！",
 	"interact_load.description": "通过shift加左键单击箱子将东西装入水晶匣子",
-	"interact_load.title": "拿来吧你",
+	"interact_load.title": "拿来吧你！",
 	"multi_switch.description": "获得一个三合一切换袋",
 	"multi_switch.title": "三位一体",
 	"press_b.description": "通过快捷键打开背包",
