--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -29,7 +29,7 @@
 	"drawer_collect.description": "通过shift加右键将一类物品全部收集到水晶匣子里",
 	"drawer_collect.title": "再见啦，圆石",
 	"drawer_extract.description": "通过右键单击从水晶匣子中取出物品",
-	"drawer_extract.title": "该你上场了，圆石！",
+	"drawer_extract.title": "通通出来！",
 	"drawer_store.description": "将物品放在水晶匣子里",
 	"drawer_store.title": "是堆栈吗？",
 	"drawer_take.description": "从水晶匣子里拿取物品",
