--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -27,7 +27,7 @@
 	"drawer.description": "获得一个水晶匣子",
 	"drawer.title": "便携式抽屉",
 	"drawer_collect.description": "通过shift加右键将一类物品全部收集到水晶匣子里",
-	"drawer_collect.title": "再见啦，圆石",
+	"drawer_collect.title": "进去，进去",
 	"drawer_extract.description": "通过右键单击从水晶匣子中取出物品",
 	"drawer_extract.title": "通通出来！",
 	"drawer_store.description": "将物品放在水晶匣子里",
