--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -43,7 +43,7 @@
 	"ender_pocket.description": "获得一个空间升级组件",
 	"ender_pocket.title": "空间扩充",
 	"ender_switch.description": "获得一个四合一切换袋",
-	"ender_switch.title": "四位一体",
+	"ender_switch.title": "全能切换",
 	"folder_structure.description": "退出背包的GUI并返回上一页",
 	"folder_structure.title": "这是...文件夹?",
 	"interact_dump.description": "手持水晶匣子shift加右键将物品倒入一个箱子里",
