--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -19,7 +19,7 @@
 	"dimension_analog.description": "使用红石比较器测量一个空间背包或者末影匣子",
 	"dimension_analog.title": "无线通信",
 	"dimension_hopper.description": "使用漏斗将物品输入空间背包或末影匣子",
-	"dimension_hopper.title": "漏斗的应用",
+	"dimension_hopper.title": "高速传输",
 	"dimension_recursion.description": "在空间背包内打开背包",
 	"dimension_recursion.title": "无限递增",
 	"dimension_share.description": "打开他人的空间背包或使用他人的末影匣子",
