--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -57,6 +57,74 @@
   "key.l2backpack.up": "箭矢选择-向上",
   "key.l2backpack.down": "箭矢选择-向下",
   "key.l2backpack.swap": "工具/护甲交换",
+  "advancements.l2backpack.advancements.backpacks.armor_swap.description": "取得一个护甲切换袋",
+  "advancements.l2backpack.advancements.backpacks.armor_swap.title": "备用护甲",
+  "advancements.l2backpack.advancements.backpacks.backpack.description": "取得一个背包",
+  "advancements.l2backpack.advancements.backpacks.backpack.title": "第一个背包",
+  "advancements.l2backpack.advancements.backpacks.bag.description": "获取一个装备收纳袋或者一个附魔书收纳袋",
+  "advancements.l2backpack.advancements.backpacks.bag.title": "万物皆可叠",
+  "advancements.l2backpack.advancements.backpacks.bag_collect.description": "右键收纳袋以收起背包内用不到的装备或附魔书",
+  "advancements.l2backpack.advancements.backpacks.bag_collect.title": "一键收纳",
+  "advancements.l2backpack.advancements.backpacks.bag_dump.description": "将收集到的武器和工具通过shift加右键从包里扔掉",
+  "advancements.l2backpack.advancements.backpacks.bag_dump.title": "一键清理",
+  "advancements.l2backpack.advancements.backpacks.close_all.description": "用shift+esc直接退出所有GUI",
+  "advancements.l2backpack.advancements.backpacks.close_all.title": "快速退出",
+  "advancements.l2backpack.advancements.backpacks.color.description": "获得所有颜色的背包",
+  "advancements.l2backpack.advancements.backpacks.color.title": "七彩斑斓",
+  "advancements.l2backpack.advancements.backpacks.dimension.description": "获得空间背包",
+  "advancements.l2backpack.advancements.backpacks.dimension.title": "这是...末影箱？",
+  "advancements.l2backpack.advancements.backpacks.dimension_analog.description": "使用红石比较器测量一个空间背包或者末影匣子",
+  "advancements.l2backpack.advancements.backpacks.dimension_analog.title": "无线通信",
+  "advancements.l2backpack.advancements.backpacks.dimension_hopper.description": "使用漏斗将物品输入空间背包或末影匣子",
+  "advancements.l2backpack.advancements.backpacks.dimension_hopper.title": "高速传输",
+  "advancements.l2backpack.advancements.backpacks.dimension_recursion.description": "在空间背包内打开背包",
+  "advancements.l2backpack.advancements.backpacks.dimension_recursion.title": "无限递增",
+  "advancements.l2backpack.advancements.backpacks.dimension_share.description": "打开他人的空间背包或使用他人的末影匣子",
+  "advancements.l2backpack.advancements.backpacks.dimension_share.title": "让我康康！",
+  "advancements.l2backpack.advancements.backpacks.drawer.description": "获得一个水晶匣子",
+  "advancements.l2backpack.advancements.backpacks.drawer.title": "便携式抽屉",
+  "advancements.l2backpack.advancements.backpacks.drawer_collect.description": "通过shift加右键将一类物品全部收集到水晶匣子里",
+  "advancements.l2backpack.advancements.backpacks.drawer_collect.title": "进去，进去",
+  "advancements.l2backpack.advancements.backpacks.drawer_extract.description": "通过右键单击从水晶匣子中取出物品",
+  "advancements.l2backpack.advancements.backpacks.drawer_extract.title": "通通出来！",
+  "advancements.l2backpack.advancements.backpacks.drawer_store.description": "将物品放在水晶匣子里",
+  "advancements.l2backpack.advancements.backpacks.drawer_store.title": "是堆栈吗？",
+  "advancements.l2backpack.advancements.backpacks.drawer_take.description": "从水晶匣子里拿取物品",
+  "advancements.l2backpack.advancements.backpacks.drawer_take.title": "就是堆栈",
+  "advancements.l2backpack.advancements.backpacks.ender.description": "获得末影背包",
+  "advancements.l2backpack.advancements.backpacks.ender.title": "便携式末影箱",
+  "advancements.l2backpack.advancements.backpacks.ender_drawer.description": "获得一个末影匣子",
+  "advancements.l2backpack.advancements.backpacks.ender_drawer.title": "第三类末影箱？",
+  "advancements.l2backpack.advancements.backpacks.ender_drawer_place.description": "放置一个末影匣子",
+  "advancements.l2backpack.advancements.backpacks.ender_drawer_place.title": "远程快递",
+  "advancements.l2backpack.advancements.backpacks.ender_pocket.description": "获得一个空间升级组件",
+  "advancements.l2backpack.advancements.backpacks.ender_pocket.title": "空间扩充",
+  "advancements.l2backpack.advancements.backpacks.ender_switch.description": "获得一个四合一切换袋",
+  "advancements.l2backpack.advancements.backpacks.ender_switch.title": "全能切换",
+  "advancements.l2backpack.advancements.backpacks.folder_structure.description": "退出背包的GUI并返回上一页",
+  "advancements.l2backpack.advancements.backpacks.folder_structure.title": "这是...文件夹?",
+  "advancements.l2backpack.advancements.backpacks.interact_dump.description": "手持水晶匣子shift加右键将物品倒入一个箱子里",
+  "advancements.l2backpack.advancements.backpacks.interact_dump.title": "卸货！",
+  "advancements.l2backpack.advancements.backpacks.interact_load.description": "通过shift加左键单击箱子将东西装入水晶匣子",
+  "advancements.l2backpack.advancements.backpacks.interact_load.title": "拿来吧你！",
+  "advancements.l2backpack.advancements.backpacks.multi_switch.description": "获得一个三合一切换袋",
+  "advancements.l2backpack.advancements.backpacks.multi_switch.title": "三位一体",
+  "advancements.l2backpack.advancements.backpacks.press_b.description": "通过快捷键打开背包",
+  "advancements.l2backpack.advancements.backpacks.press_b.title": "快速便捷",
+  "advancements.l2backpack.advancements.backpacks.quick_access.description": "直接在物品栏中打开背包",
+  "advancements.l2backpack.advancements.backpacks.quick_access.title": "会员通道",
+  "advancements.l2backpack.advancements.backpacks.quiver.description": "获得一个箭袋",
+  "advancements.l2backpack.advancements.backpacks.quiver.title": "备箭充足",
+  "advancements.l2backpack.advancements.backpacks.root.description": "使用背包指南",
+  "advancements.l2backpack.advancements.backpacks.root.title": "欢迎使用L2Backpack",
+  "advancements.l2backpack.advancements.backpacks.safe_storage.description": "在末影背包中打开一个背包",
+  "advancements.l2backpack.advancements.backpacks.safe_storage.title": "安全仓库",
+  "advancements.l2backpack.advancements.backpacks.scabbard.description": "获得一个工具切换袋",
+  "advancements.l2backpack.advancements.backpacks.scabbard.title": "工具应有尽有",
+  "advancements.l2backpack.advancements.backpacks.upgrade.description": "升级一个背包",
+  "advancements.l2backpack.advancements.backpacks.upgrade.title": "扩展空间",
+  "advancements.l2backpack.advancements.backpacks.upgrade_max.description": "把背包升至满级",
+  "advancements.l2backpack.advancements.backpacks.upgrade_max.title": "有容乃大",
   "l2backpack.tooltip.backpack_slot": "背包升级: %s / %s",
   "l2backpack.tooltip.owner": "所有者: %s",
   "l2backpack.tooltip.item.size": "容量:%s/%s",
