--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -19,7 +19,7 @@
 		"ender_drawer": "所有设置了相同物品且是相同所有者的末影匣子共用相同的空间，包括物品和方块形式",
 		"upgrade": "在锻造台中使用空间升级组件来升级。内容物品和名字会被保留",
 		"exit": "关闭GUI时会回到上一个GUI（只能回到玩家背包/末影箱/空间背包），shift+esc全部关闭",
-		"tool_bag": "放在副手/胸甲栏/饰品栏，主手持工具/武器，可以从袋内预览、选择、快速切换。按shift+数字键或者上下选择物品，按R切换",
+		"tool_bag": "放在副手/胸甲栏/饰品栏，主手持工具/武器（或者空手按Alt），可以从袋内预览、选择、快速切换。按shift+数字键或者上下选择物品，按R切换",
 		"armor_bag": "放在副手/胸甲栏/饰品栏，主手持弓，可以从袋内预览、选择、快速切换。按shift+数字键或者上下选择护甲，按R切换",
 		"ender_switch": "同时拥有三合一切换袋和末影背包的功能。注意箭/工具/护甲是储存在这个物品内的，而不是末影箱内",
 		"inherit": "继承背包的所有功能，只是不能升级",
