--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -139,7 +139,7 @@
   "l2backpack.tooltip.info.upgrade": "在锻造台中使用空间升级组件来升级。内容物品和名字会被保留",
   "l2backpack.tooltip.info.exit": "关闭GUI时会回到上一个GUI（只能回到玩家背包/末影箱/空间背包），shift+esc全部关闭",
   "l2backpack.tooltip.info.tool_bag": "放在副手/胸甲栏/饰品栏，主手持工具/武器（或者空手按Alt），可以从袋内预览、选择、快速切换。按shift+数字键或者上下选择物品，按R切换",
-  "l2backpack.tooltip.info.armor_bag": "放在副手/胸甲栏/饰品栏，主手持弓，可以从袋内预览、选择、快速切换。按shift+数字键或者上下选择护甲，按R切换",
+  "l2backpack.tooltip.info.armor_bag": "放在副手/胸甲栏/饰品栏，空主手可以从袋内预览、选择、快速切换。按shift+数字键或者上下选择护甲，按R切换",
   "l2backpack.tooltip.info.ender_switch": "同时拥有三合一切换袋和末影背包的功能。注意箭/工具/护甲是储存在这个物品内的，而不是末影箱内",
   "l2backpack.tooltip.info.inherit": "继承背包的所有功能，只是不能升级",
   "l2backpack.tooltip.info.multi_switch": "同时拥有箭/工具/护甲的快速切换功能。主手持弓激活箭袋模式。持工具武器激活工具切换模式。空手激活护甲切换模式。",
