--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -47,9 +47,11 @@
 	  "collect": "已收集%s物品",
 	  "no_item": "末影匣子没有设置物品，不能放置"
 	},
-
-	"names": {
-	  "unnamed": "无名的冒险家"
+	"loot": {
+	  "unnamed": {
+		"name": "无名的冒险家",
+		"item": "无名者的保险箱"
+	  }
 	}
   }
 }
