--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -141,7 +141,7 @@
   "l2backpack.tooltip.info.tool_bag": "放在副手/胸甲栏/饰品栏，蹲下并主手持工具/武器（或者空手按Alt），可以从袋内预览、选择、快速切换。蹲下按数字键或者上下选择物品，按R切换",
   "l2backpack.tooltip.info.armor_bag": "放在副手/胸甲栏/饰品栏，蹲下并空主手可以从袋内预览、选择、快速切换。蹲下按数字键或者上下选择护甲，按R切换",
   "l2backpack.tooltip.info.ender_switch": "同时拥有三合一切换袋和末影背包的功能。注意箭/工具/护甲是储存在这个物品内的，而不是末影箱内",
-  "l2backpack.tooltip.info.inherit": "继承背包的所有功能，只是不能升级",
+  "l2backpack.tooltip.info.inherit": "继承背包的所有功能，只是不能升级。能放在普通背包中，但是不能在普通背包中直接打开。放在空间背包中启用快捷访问功能。",
   "l2backpack.tooltip.info.multi_switch": "同时拥有箭/工具/护甲的快速切换功能。蹲下并主手持对应物品激活对应模式。空手按alt激活工具切换模式。",
   "l2backpack.tooltip.collect.item": "拿在手上右键收起工具栏以外的背包内的对应物品",
   "l2backpack.tooltip.collect.drawer": "拿在手上蹲下右键收起背包内的对应物品",
