--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -127,6 +127,7 @@
   "advancements.l2backpack.advancements.backpacks.upgrade_max.title": "有容乃大",
   "l2backpack.tooltip.backpack_slot": "背包升级: %s / %s",
   "l2backpack.tooltip.owner": "所有者: %s",
+  "l2backpack.tooltip.quick_access": "在GUI中右键打开",
   "l2backpack.tooltip.item.size": "容量:%s/%s",
   "l2backpack.tooltip.drawer.content": "内容物：%s x%s",
   "l2backpack.tooltip.info.drawer": "在任意GUI内，用物品左键匣子来存入物品，右键匣子取出物品。只能存放一种没有NBT的物品，但是能储存64组。",
