--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -3,6 +3,7 @@
 	"tooltip": {
 	  "backpack_slot": "背包升级: %s / %s",
 	  "owner": "所有者: %s",
+	  "quick_access": "在GUI中右键打开",
 	  "item": {
 		"size": "容量:%s/%s"
 	  },
