--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -1,6 +1,7 @@
 {
   "block.l2backpack.dimensional_storage": "空间箱子",
   "block.l2backpack.ender_drawer": "末影匣子",
+  "block.l2backpack.drawer": "水晶匣子",
   "item.l2backpack.ender_backpack": "末影背包",
   "item.l2backpack.ender_pocket": "空间升级组件",
   "item.l2backpack.armor_bag": "装备袋",
@@ -51,12 +52,9 @@
   "container.l2backpack.ender_switch": "四合一切换袋",
   "container.l2backpack.multi_switch": "三合一切换袋",
   "container.l2backpack.tool_bag": "工具切换袋",
-  "itemGroup.l2backpack.backpack": "莱特兰·背包",
+  "itemGroup.l2library.backpack": "莱特兰·背包",
   "key.categories.l2backpack": "背包按键",
   "key.l2backpack.open": "打开背部饰品栏的容器",
-  "key.l2backpack.up": "箭矢选择-向上",
-  "key.l2backpack.down": "箭矢选择-向下",
-  "key.l2backpack.swap": "工具/护甲交换",
   "advancements.l2backpack.advancements.backpacks.armor_swap.description": "取得一个护甲切换袋",
   "advancements.l2backpack.advancements.backpacks.armor_swap.title": "备用护甲",
   "advancements.l2backpack.advancements.backpacks.backpack.description": "取得一个背包",
