gen lang, bug fix

--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -16,7 +16,7 @@
 		"quick_any": "右键打开，或者在任何GUI内右键快捷访问",
 		"ender_drawer_block": "对于末影匣子方块，手持物品右键存入，空手右键取出一组。如果需要大量转移物品，用水晶匣子物品交互来一次行大量存入/提取",
 		"dimensional": "所有相同颜色且相同所有者的空间背包共用相同的空间，包括物品和方块形式",
-		"ender_drawer": "所有设置了相同物品且是相同所有者的末影匣子共用相同的空间，包括物品和方块形式",
+		"ender_drawer": "使用方法同匣子。所有设置了相同物品且是相同所有者的末影匣子共用相同的空间，包括物品和方块形式。和匣子一样有归类模式配置。",
 		"upgrade": "在锻造台中使用空间升级组件来升级。内容物品和名字会被保留",
 		"exit": "关闭GUI时会回到上一个GUI（只能回到玩家背包/末影箱/空间背包），shift+esc全部关闭",
 		"tool_bag": "放在副手/胸甲栏/饰品栏，蹲下并主手持工具/武器（或者空手按Alt），可以从袋内预览、选择、快速切换。蹲下按数字键或者上下选择物品，按R切换",
@@ -24,7 +24,15 @@
 		"ender_switch": "同时拥有三合一切换袋和末影背包的功能。注意箭/工具/护甲是储存在这个物品内的，而不是末影箱内",
 		"inherit": "继承背包的所有功能，只是不能升级。能放在普通背包中，但是不能在普通背包中直接打开。放在空间背包中启用快捷访问功能。",
 		"multi_switch": "同时拥有箭/工具/护甲的快速切换功能。蹲下并主手持对应物品激活对应模式。空手按alt激活工具切换模式。",
-		"loot": "里面可能有奖励"
+		"loot": "里面可能有奖励",
+		"pickup": "归类模式开启时，拾取的物品符合条件的话会自动放入背上的背包中。此背包中的背包和匣子的拾取功能也会递归生效。",
+		"pickup_tweaker": "右键物品栏中的背包或匣子来调整归类模式。堆叠模式只允许不占用新的空白格子的物品被自动归类。自动拾取模式会允许物品占用背包中的空格子。"
+	  },
+	  "mode": {
+		"all": "自动拾取模式，递归生效",
+		"disp": "归类模式: %s",
+		"none": "关闭",
+		"stacking": "堆叠模式，递归生效"
 	  },
 	  "collect": {
 		"item": "拿在手上右键收起工具栏以外的背包内的对应物品",
