--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -13,6 +13,7 @@
   "item.l2backpack.combined_swap": "三合一切换袋",
   "item.l2backpack.ender_swap": "四合一切换袋",
   "item.l2backpack.tool_swap": "工具切换袋",
+  "item.l2backpack.pickup_tweaker_tool": "归类模式配置器",
   "item.l2backpack.backpack_black": "黑色背包",
   "item.l2backpack.backpack_blue": "蓝色背包",
   "item.l2backpack.backpack_brown": "棕色背包",
@@ -141,7 +142,7 @@
   "l2backpack.tooltip.info.inherit": "继承背包的所有功能，只是不能升级。能放在普通背包中，但是不能在普通背包中直接打开。放在空间背包中启用快捷访问功能。",
   "l2backpack.tooltip.info.multi_switch": "同时拥有箭/工具/护甲的快速切换功能。蹲下并主手持对应物品激活对应模式。空手按alt激活工具切换模式。",
   "l2backpack.tooltip.info.loot": "里面可能有奖励",
-  "l2backpack.tooltip.info.pickup": "归类模式开启时，拾取的物品符合条件的话会自动放入背上的背包中。此背包中的背包和匣子的拾取功能也会递归生效。",
+  "l2backpack.tooltip.info.pickup": "支持递归归类模式",
   "l2backpack.tooltip.info.pickup_tweaker": "右键物品栏中的背包或匣子来调整归类模式。堆叠模式只允许不占用新的空白格子的物品被自动归类。自动拾取模式会允许物品占用背包中的空格子。",
   "l2backpack.tooltip.mode.all": "自动拾取模式，递归生效",
   "l2backpack.tooltip.mode.disp": "归类模式: %s",
@@ -151,8 +152,7 @@
   "l2backpack.tooltip.collect.drawer": "拿在手上蹲下右键收起背包内的对应物品",
   "l2backpack.tooltip.extract.item": "蹲下右键倒出所有物品",
   "l2backpack.tooltip.extract.drawer": "右键提取1组物品",
-  "l2backpack.tooltip.dump": "对着方块容器蹲下右键，把所有物品倒入目标方块",
-  "l2backpack.tooltip.load": "对着方块容器蹲下左键，从目标方块尽可能的提取物品",
+  "l2backpack.tooltip.load": "支持直接从箱子中批量提取/向箱子倒出物品",
   "l2backpack.tooltip.place": "蹲下右键放置方块形式",
   "l2backpack.tooltip.shift": "按[shift]显示使用方法",
   "l2backpack.tooltip.keybind": "可以放到胸甲栏或饰品栏，然后绑定按键快捷打开",
