--- a/src/test/resources/l2backpack/lang/zh_cn/item.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/item.json
@@ -15,7 +15,8 @@
 	"armor_swap": "护甲切换袋",
 	"combined_swap": "三合一切换袋",
 	"ender_swap": "四合一切换袋",
-	"tool_swap": "工具切换袋"
+	"tool_swap": "工具切换袋",
+	"pickup_tweaker_tool": "归类模式配置器"
   },
   "-cartesian": {
 	"backpack": {
