--- a/changelog.txt
+++ b/changelog.txt
@@ -1,15 +1,11 @@
 2.4.13
 - add pickup option
-- add pickup wand
-- add pickup tooltip
-- add drawer upgrade persistence
-- keybind name
-- add drawer upgrade TODO
-- add upgrade page TODO
+- add drawer upgrade
+- Overlay item insert
+- patchouli page
 - add wand page TODO
-- drawer upgrade patchouli TODO
-- drawer upgrade jei TODO
-- drawer upgrade recipe TODO
+- keybind name TODO
+-
 
 2.4.12
 - Now non-player can also use quick swap
