ender backpack render

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
-2.4.15
 - add wand page TODO
 - keybind name TODO
+
+2.4.15
+- make all backpacks rendering as items instead
+- fix F3+B triggers backpacks
+- add support for Curios render toggle
+- add 3 backpack fast insert config options: left click, right click, shift
 
 2.4.14
 - Fix drawer crash if placed in 2.4.12
