add arrow pickup

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,9 @@
 - fix F3+B triggers backpacks
 - add support for Curios render toggle
 - add 3 backpack fast insert config options: left click, right click, shift
+- Swaps can now trigger in ender backpack
+- deprecate Ender Swap
+- arrow pickup into Quiver when pickup enabled
 
 2.4.14
 - Fix drawer crash if placed in 2.4.12
